resolve horizontal scroll issue

--- a/src/css/style.comp.css
+++ b/src/css/style.comp.css
@@ -1032,7 +1032,8 @@ p {
     z-index: 500;
     position: absolute;
     text-align: center;
-    top: -22rem; }
+    top: -22rem;
+    right: 0; }
     @media only screen and (max-width: 64em) {
       .section-work .col-1-of-1 {
         max-width: 80rem;
@@ -1044,9 +1045,12 @@ p {
         padding: 0 3rem;
         margin-left: -3rem;
         top: -28rem; } }
-  @media only screen and (max-width: 64em) {
-    .section-work .heading-secondary {
-      margin-top: 2rem; } }
+  .section-work .heading-secondary {
+    display: flex;
+    justify-content: center; }
+    @media only screen and (max-width: 64em) {
+      .section-work .heading-secondary {
+        margin-top: 2rem; } }
 
 .section-orgs {
   position: relative;
@@ -1079,7 +1083,8 @@ p {
     z-index: 500;
     position: absolute;
     text-align: center;
-    top: -32rem; }
+    top: -32rem;
+    right: 0; }
     @media only screen and (max-width: 64em) {
       .section-contact .col-1-of-1 {
         max-width: 80rem;
